--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,21 @@ p{
   margin-bottom: 10px;
 }
 
+.about .portfolio{
+  margin: 20px 0;
+}
+
+.card_container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card{
+  width: 150px;
+  margin-bottom: 10px;
+}
+
 .skills .box{
   position: relative;
   width: 100%;
